crates/db-read-lockdown/tests/ui/read_conn_no_unchecked_transaction.stderr
error[E0599]: no method named `unchecked_transaction` found for reference `&ReadConn<'_>` in the current scope
 --> tests/ui/read_conn_no_unchecked_transaction.rs:3:19
  |
3 |         let _ = c.unchecked_transaction();
  |                   ^^^^^^^^^^^^^^^^^^^^^ method not found in `&ReadConn<'_>`
