crates/db-read-lockdown/tests/ui/read_conn_no_unchecked_transaction.rs
fn main() {
    fn proves(c: &db_read::ReadConn<'_>) {
        let _ = c.unchecked_transaction();
    }
    let _ = proves;
}
